# ml-churn-prediction

./: .gitignore  README.md  mlflow.db  pyproject.toml
data/eda_output/: Telco_customer_churn_encoded.csv
data/processed/: telco_customer_churn_eda_encoded.csv  telco_customer_churn_eda_pre-processed.csv  telco_customer_churn_eda_pre-processed_encoded.csv
docs/: architecture.md  ml_canvas.md  model_card.md  tech_challenge.md
notebooks/: 01_eda_feature_engineering.ipynb  01_eda_pre_processing.ipynb  02_baselines.ipynb
src/tracking/: __init__.py  mlflow_utils.py
