[project]
name = "ml-churn-prediction"
version = "0.1.0"

dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "skops",
    "torch",
    "fastapi",
    "uvicorn",
    "mlflow",
    "kagglehub",
    "openpyxl",
    "seaborn",
    "imblearn"
]

[project.optional-dependencies]
dev = [
    "ipykernel",
    "jupyter"
]